--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @keyframes logo {
     0% {bottom: 120vh;}
-    100% {bottom: 0;}
+    100% {bottom: 50px;}
 }
 body {
     padding: 0;
@@ -19,7 +19,7 @@ body {
 }
 .main-head img {
     position: absolute;
-    bottom: 0;
+    bottom: 50px;
     width: 40%;
     left: 30%;
     animation: logo 2s;
