--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poiret+One');
+
 @keyframes logo {
     0% {bottom: 120vh;}
     100% {bottom: 50px;}
@@ -19,12 +21,42 @@ body {
 }
 .main-head img {
     position: absolute;
-    bottom: 50px;
+    bottom: 30px;
     width: 40%;
     left: 30%;
     animation: logo 1.5s;
+    z-index: 0;
 }
 iframe {
     width: 100%;
     height: 100vh;
 }
+.mnu-line {
+    padding-top: 10px;
+    height: 50px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: relative;
+    z-index: 1;
+}
+ul {
+    margin: 0;
+    padding: 0;
+    font-size: 25px;
+    text-align: center;
+    color: #fa0;
+    font-family: "Poiret One";
+    font-weight: 800;
+}  
+li {
+    display: inline-block;
+    margin: 0 auto;
+    margin-right: 20px;
+}
+li:last-child {
+    margin-right: 0px;
+}
+a {
+    text-decoration: none;
+}
+
