--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Poiret+One');
+
 @keyframes logo {
     0% {bottom: 120vh;}
-    100% {bottom: 50px;}
+    100% {bottom: 30px;}
 }
 body {
     padding: 0;
@@ -17,14 +19,61 @@ body {
     background-position: top center;
     position: relative;
 }
+.main-head-2 {
+    width: 100%;
+    height: 100vh;
+    background-image: url(img/background.jpg);
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: top center;
+    text-align: center;
+}
+.main-head-3 {
+    width: 100%;
+    height: 100vh;
+    background-image: url(img/background2.jpg);
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: top center;
+    text-align: center;
+}
 .main-head img {
     position: absolute;
-    bottom: 50px;
+    bottom: 30px;
     width: 40%;
     left: 30%;
     animation: logo 1.5s;
+    z-index: 0;
 }
-iframe {
+.mnu-line {
+    padding-top: 15px;
+    min-height: 50px;
     width: 100%;
-    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: relative;
+    z-index: 1;
+}
+ul {
+    margin: 0;
+    padding: 0;
+    font-size: 25px;
+    text-align: center;
+    color: #fa0;
+    font-family: "Poiret One";
+    font-weight: 800;
+}  
+li {
+    display: inline-block;
+    margin: 0 auto;
+    margin-right: 20px;
+}
+li:last-child {
+    margin-right: 0px;
+}
+a {
+    text-decoration: none;
+    color: #fa0;
+}
+.main-head-2 iframe {
+    margin-top: 10vh;
 }
