--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,9 @@ a:hover. a:focus {
     font-weight: 300;
     line-height: 1.5em;
 }
+
+@media (orietation: portrait) {
+    .headerwrap {
+    min-height: 100vh;
+    }
+}
