--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato|Rubik+Mono+One');
+@import url('https://fonts.googleapis.com/css?family=Lato|Rubik+Mono+One|Comfortaa');
 
 body {
     background-color: #f2f2f2;
@@ -83,9 +83,25 @@ a:hover. a:focus {
     font-weight: 300;
     line-height: 1.5em;
 }
+.w {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
 
-@media (orietation: portrait) {
-    .headerwrap {
-    min-height: 100vh;
-    }
+h4 {
+    font-family: "Comfortaa";
+    font-weight: 800;
+}
+
+h3 {
+    font-family: "Comfortaa";
+    font-weight: 800;
+}
+
+img {
+    width: 100%;
+}
+
+.dg {
+    
 }
