--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     background-color: #f2f2f2;
-    font-family: "lato";
+    font-family: "lato", sans-serif;
     font-weight: 300;
     font-size: 16px;
     color: #555;
@@ -14,7 +14,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Rubik Mono One";
+    font-family: "Rubik Mono One", sans-serif;
     font-weight: 300;
     color: #333;
 }
@@ -69,7 +69,9 @@ a:hover. a:focus {
     background-attachment: fixed;
     box-shadow: 0px 0px 20px #000;
 }
-
+li {
+    font-family: "Comfortaa", sans-serif;
+}
 .headerwrap h1{
     margin-top: 100px;
     color: #fff;
@@ -89,19 +91,33 @@ a:hover. a:focus {
 }
 
 h4 {
-    font-family: "Comfortaa";
+    font-family: "Comfortaa", sans-serif;
     font-weight: 800;
 }
 
-h3 {
-    font-family: "Comfortaa";
+.dg h3 {
+    font-family: "Comfortaa", sans-serif;
     font-weight: 800;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 img {
     width: 100%;
+    box-shadow: 1px 1px 5px #000;
+}
+
+.tilt {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    transition: 1s;
+}
+.tilt:hover {
+    transform: rotate(5deg);
 }
 
 .dg {
-    
+    background-color: #e0e0e0;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
