--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ p {
 }
 
 a {
-    color: #f85c37
+    color: #f85c37;
 }
 
 a:hover. a:focus {
@@ -69,6 +69,16 @@ a:hover. a:focus {
     background-attachment: fixed;
     box-shadow: 0px 0px 20px #000;
 }
+.headerwrapa {
+    background-image: url(../img/background-about.jpg);
+    background-position: center top;
+    background-size: cover;
+    min-height: 500px;
+    text-align: center;
+    padding-top: 20px;
+    background-attachment: fixed;
+    box-shadow: 0px 0px 20px #000;
+}
 li {
     font-family: "Comfortaa", sans-serif;
 }
@@ -78,8 +88,20 @@ li {
     font-size: 2em;
     font-weight: 300;
 }
+.headerwrapa h1{
+    margin-top: 100px;
+    color: #fff;
+    font-size: 2em;
+    font-weight: 300;
+}
 
 .headerwrap h2{
+    color: #fff;
+    font-size: 1.5em;
+    font-weight: 300;
+    line-height: 1.5em;
+}
+.headerwrapa h2{
     color: #fff;
     font-size: 1.5em;
     font-weight: 300;
@@ -97,14 +119,13 @@ h4 {
 
 .dg h3 {
     font-family: "Comfortaa", sans-serif;
-    font-weight: 800;
+    font-weight: 300;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 img {
     width: 100%;
-    box-shadow: 1px 1px 5px #000;
 }
 
 .tilt {
@@ -132,17 +153,34 @@ h3{
     font-family: "Comfortaa", sans-serif;
     font-size: 2em;
 }
-
-@media (max-width: 767px) {
-    
-    /*Добавил это, потому что начинаются проблемы с тенью*/
-    
-    .tilt:hover {
-    transform: rotate(0deg);
-    }
-    
-    h3{
-    font-family: "Comfortaa", sans-serif;
-    font-size: 2em;
+.wg {
+    background-color: #e0e0e0;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
+.wg h3 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.btnwh {
+    width: 100%;
+    height: 50px;
+}
+footer {
+    background-color: #2d2d2d;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+footer i{
+    color: #bdbdbd;
+    font-size: 30px;
+    padding: 20px;
+}
+footer a{
+    color: #bdbdbd;
+    font-size: 30px;
+    text-decoration: none;
+}
+footer i:hover{
+    color: #f2f2f2;
 }
