--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ a:hover. a:focus {
     padding-top: 20px;
     background-attachment: fixed;
     box-shadow: 0px 0px 20px #000;
+    width: 100%;
 }
 li {
     font-family: "Comfortaa", sans-serif;
@@ -91,7 +92,7 @@ li {
 .headerwrapa h1{
     margin-top: 100px;
     color: #fff;
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: 300;
 }
 
@@ -103,7 +104,7 @@ li {
 }
 .headerwrapa h2{
     color: #fff;
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: 300;
     line-height: 1.5em;
 }
