--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,31 @@ a:hover. a:focus {
     background-attachment: fixed;
     box-shadow: 0px 0px 20px #000;
 }
+.bground {
+    background-image: url(../img/background-header.jpg);
+    background-position: center top;
+    background-size: cover;
+    min-height: 500px;
+    padding-top: 20px;
+    background-attachment: fixed;
+    box-shadow: 0px 0px 20px #000;
+}
 .headerwrapa {
     background-image: url(../img/background-about.jpg);
     background-position: center top;
     background-size: cover;
     min-height: 500px;
+    text-align: center;
+    padding-top: 20px;
+    background-attachment: fixed;
+    box-shadow: 0px 0px 20px #000;
+    width: 100%;
+}
+.headerwrapaa {
+    background-image: url(../img/background-order.jpg);
+    background-position: center top;
+    background-size: cover;
+    min-height: 800px;
     text-align: center;
     padding-top: 20px;
     background-attachment: fixed;
@@ -95,7 +115,18 @@ li {
     font-size: 1.5em;
     font-weight: 300;
 }
-
+.headerwrapaa h1{
+    margin-top: 100px;
+    color: #fff;
+    font-size: 2em;
+    font-weight: 300;
+}
+.headerwrapaa h2{
+    color: #fff;
+    font-size: 1.5em;
+    font-weight: 300;
+    line-height: 1.5em;
+}
 .headerwrap h2{
     color: #fff;
     font-size: 1.5em;
@@ -149,6 +180,13 @@ img {
     padding-top: 35px;
     padding-bottom: 35px;
 }
+.bground a{
+    color: #555;
+    text-decoration: none;
+}
+.bground {
+    padding-top: 200px;
+}
 
 h3{
     font-family: "Comfortaa", sans-serif;
@@ -168,6 +206,7 @@ h3{
     width: 100%;
     height: 50px;
 }
+
 footer {
     background-color: #2d2d2d;
     padding-top: 30px;
@@ -185,4 +224,15 @@ footer a{
 }
 footer i:hover{
     color: #f2f2f2;
+}
+.btnwh a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+}
+.order-email {
+    font-size: 1.2em;
+}
+.well {
+    text-align: left;
 }
