--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ li {
 }
 .headerwrapa h2{
     color: #fff;
-    font-size: 1.2em;
+    font-size: 1.5em;
     font-weight: 300;
     line-height: 1.5em;
 }
@@ -235,4 +235,7 @@ footer i:hover{
 }
 .well {
     text-align: left;
+}
+.headerwrap, .headerwrapa{
+    text-shadow: 2px 2px 5px #000;
 }
