--- a/tictactoe/style.css
+++ b/tictactoe/style.css
@@ -5,6 +5,10 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
+    height: 100vh;
+    display: flex:
+    justify-content: center;
+    align-items: center;
 }
 h1 {
     font-family: Roboto;
